--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloth Simulation</title>
+    <title>MV Simulation (dev)</title>
     <style>
         .button {
             background-color: #606060;
@@ -21,7 +21,7 @@
     </style>	
 </head>
 <body>	
-    <h1>Mitral Valve Model Simulation</h1> 
+    <h1>Mitral Valve Model Simulation (dev edition)</h1> 
     <button type="button" id="buttonRun" class="button">Run</button>
     <button type="button" id="buttonRestart" class="button">Restart</button>
     <button type="button" id="buttonExport" class="button disabled" disabled>Export</button>
