--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <span id="numTris">0</span> tris&nbsp;&nbsp;
     <span id="numVerts">0</span> verts&nbsp;&nbsp;
     <span id="ms">0.000</span> ms per frame&nbsp;&nbsp;
+    Resulting Force: <span id="force">0</span> &nbsp;&nbsp;
     <div id="container"></div>
     <script src="https://unpkg.com/three@0.139.2/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.139.2/examples/js/controls/OrbitControls.js"></script>
